--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
+    "mime-types": "^3.0.1",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
