--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
@@ -33,11 +34,13 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@types/bcryptjs": "^2.4.6",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "mime-types": "^3.0.1",
@@ -52,8 +55,9 @@
     "resend": "^4.2.0",
     "sharp": "^0.34.1",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.3",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -64,6 +68,7 @@
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
     "prisma": "^6.5.0",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
