--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mime-types": "^3.0.1",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
@@ -54,7 +55,7 @@
     "react-redux": "^9.2.0",
     "resend": "^4.2.0",
     "sharp": "^0.34.1",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.3",
     "uuid": "^11.1.0",
